--- a/hamzar/en.lproj/MainStoryboard_iPad.storyboard
+++ b/hamzar/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,62 +1,111 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="nRU-Vw-WQB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="4">
+        <!--Navigation Controller-->
+        <scene sceneID="AbN-Fc-czh">
             <objects>
-                <viewController id="2" customClass="ASAViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <navigationController definesPresentationContext="YES" id="nRU-Vw-WQB" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oRX-9j-iYU">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="cjs-Tm-ppz" kind="relationship" relationship="rootViewController" id="tFi-y7-7i4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kym-bG-UoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1055" y="-5"/>
+        </scene>
+        <!--View Controller - درباره ما-->
+        <scene sceneID="dno-2d-FQL">
+            <objects>
+                <viewController id="xUA-rl-oe2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GcV-Hg-bJo" userLabel="asda">
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hIO-yN-h65">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <dataDetectorType key="dataDetectorTypes"/>
-                                <connections>
-                                    <outlet property="delegate" destination="2" id="Huj-ih-pPv"/>
-                                </connections>
-                            </webView>
-                            <navigationBar contentMode="scaleToFill" barStyle="blackTranslucent" translatesAutoresizingMaskIntoConstraints="NO" id="z9P-Us-aWP">
-                                <items>
-                                    <navigationItem id="4QO-4Z-QN6">
-                                        <nil key="title"/>
-                                        <barButtonItem key="leftBarButtonItem" title="درباره" id="tNu-pt-KO8">
-                                            <connections>
-                                                <action selector="searchButtonPushed:" destination="2" id="VjH-Tx-b9Q"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="kx4-hi-sf3">
-                                            <connections>
-                                                <action selector="reloadButtonPushed:" destination="2" id="JV5-BY-Nx8"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What about us!?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psx-na-u5V">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration" label="">
+                            <accessibilityTraits key="traits" none="YES"/>
+                        </accessibility>
                         <constraints>
-                            <constraint firstItem="hIO-yN-h65" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="1bQ-EO-xvb"/>
-                            <constraint firstItem="z9P-Us-aWP" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="1tg-wb-49C"/>
-                            <constraint firstItem="hIO-yN-h65" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="Un2-if-7aU"/>
-                            <constraint firstItem="z9P-Us-aWP" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="Ywh-pC-SqS"/>
-                            <constraint firstItem="hIO-yN-h65" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="n4T-Jm-tTm"/>
-                            <constraint firstItem="hIO-yN-h65" firstAttribute="top" secondItem="z9P-Us-aWP" secondAttribute="bottom" type="default" id="u4h-p4-yMw"/>
-                            <constraint firstItem="z9P-Us-aWP" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="xJf-oY-9II"/>
+                            <constraint firstItem="Psx-na-u5V" firstAttribute="leading" secondItem="GcV-Hg-bJo" secondAttribute="leading" constant="91" id="c89-lW-z0v"/>
+                            <constraint firstItem="Psx-na-u5V" firstAttribute="top" secondItem="GcV-Hg-bJo" secondAttribute="top" constant="168" id="wK7-y3-GeS"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="درباره ما" id="31H-ig-P3M">
+                        <barButtonItem key="backBarButtonItem" title="بازگشت" id="piI-bz-XAS"/>
+                    </navigationItem>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pzx-RL-OpH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="960" y="-5"/>
+        </scene>
+        <!--View Controller - همزر-->
+        <scene sceneID="YKX-QL-0w8">
+            <objects>
+                <viewController id="cjs-Tm-ppz" customClass="ASAViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m34-uH-WgR">
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="XXo-ie-D1Q">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <dataDetectorType key="dataDetectorTypes"/>
+                                <connections>
+                                    <outlet property="delegate" destination="cjs-Tm-ppz" id="fd0-1O-fFa"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="XXo-ie-D1Q" firstAttribute="bottom" secondItem="m34-uH-WgR" secondAttribute="bottom" type="default" id="X6t-OU-y0o"/>
+                            <constraint firstItem="XXo-ie-D1Q" firstAttribute="leading" secondItem="m34-uH-WgR" secondAttribute="leading" type="default" id="aKb-DO-6xB"/>
+                            <constraint firstItem="XXo-ie-D1Q" firstAttribute="trailing" secondItem="m34-uH-WgR" secondAttribute="trailing" type="default" id="xQM-Jj-sNh"/>
+                            <constraint firstItem="XXo-ie-D1Q" firstAttribute="top" secondItem="m34-uH-WgR" secondAttribute="top" type="default" id="zxn-ts-2IB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="همزر" id="fAC-Tn-Scs">
+                        <barButtonItem key="backBarButtonItem" title="برگشت" id="yal-kB-9bf"/>
+                        <barButtonItem key="leftBarButtonItem" title="درباره" id="9bO-eg-PRp">
+                            <connections>
+                                <segue destination="xUA-rl-oe2" kind="push" id="JMh-gI-Ubc"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="pym-6b-elX">
+                            <connections>
+                                <action selector="reloadButtonPushed:" destination="cjs-Tm-ppz" id="6Lo-vf-lty"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <connections>
-                        <outlet property="myWebView" destination="hIO-yN-h65" id="1Lx-qV-JBJ"/>
+                        <outlet property="myWebView" destination="XXo-ie-D1Q" id="MGy-Sn-U4r"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Sd-Kh-pIe" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-230" y="-76"/>
+            <point key="canvasLocation" x="-83" y="-5"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="ASAViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ASAViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
