--- a/hamzar/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/hamzar/en.lproj/MainStoryboard_iPhone.storyboard
@@ -19,27 +19,45 @@
             </objects>
             <point key="canvasLocation" x="-325" y="133"/>
         </scene>
-        <!--View Controller - درباره ما-->
+        <!--About Controller - درباره ما-->
         <scene sceneID="Chc-Vb-BzH">
             <objects>
-                <viewController id="uv0-ux-zeQ" sceneMemberID="viewController">
+                <viewController id="uv0-ux-zeQ" customClass="ASAAboutController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="l4q-FN-fXP" userLabel="asda">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What about us!?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfM-g5-sQl">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="17" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="hfM-g5-sQl">
+                                <mutableString key="text">لورم ایپسوم متنی است که ساختگی برای طراحی و چاپ آن مورد است. صنعت چاپ زمانی لازم بود
+        شرایطی شما باید فکر ثبت نام و طراحی، لازمه خروج می باشد. در ضمن قاعده همفکری ها جوابگوی سئوالات زیاد شاید باشد،
+        آنچنان که لازم بود طراحی گرافیکی خوب بود. کتابهای زیادی شرایط سخت ، دشوار و کمی در سالهای دور لازم است. هدف از
+        این نسخه فرهنگ پس از آن و دستاوردهای خوب شاید باشد. حروفچینی لازم در شرایط فعلی لازمه تکنولوژی بود که گذشته، حال
+        و آینده را شامل گردد. سی و پنج درصد از طراحان در قرن پانزدهم میبایست پرینتر در ستون و سطر حروف لازم است، بلکه
+        شناخت این ابزار گاه اساسا بدون هدف بود و سئوالهای زیادی در گذشته بوجود می آید، تنها لازمه آن بود.
+    </mutableString>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="asa_logo_transparent.png" translatesAutoresizingMaskIntoConstraints="NO" id="KHA-uv-YzB">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="E6o-q3-ozR"/>
+                                    <constraint firstAttribute="width" constant="240" id="IhN-DI-GYh"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <accessibility key="accessibilityConfiguration" label="">
                             <accessibilityTraits key="traits" none="YES"/>
                         </accessibility>
                         <constraints>
-                            <constraint firstItem="hfM-g5-sQl" firstAttribute="leading" secondItem="l4q-FN-fXP" secondAttribute="leading" constant="91" id="FRq-oa-1wp"/>
-                            <constraint firstItem="hfM-g5-sQl" firstAttribute="top" secondItem="l4q-FN-fXP" secondAttribute="top" constant="168" id="n5c-NC-71H"/>
+                            <constraint firstItem="hfM-g5-sQl" firstAttribute="top" secondItem="KHA-uv-YzB" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="XSb-gf-CPr"/>
+                            <constraint firstAttribute="bottom" secondItem="hfM-g5-sQl" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="ihb-2t-K8O"/>
+                            <constraint firstItem="KHA-uv-YzB" firstAttribute="top" secondItem="l4q-FN-fXP" secondAttribute="top" constant="20" symbolic="YES" type="default" id="wAL-Id-Z6J"/>
+                            <constraint firstItem="hfM-g5-sQl" firstAttribute="leading" secondItem="l4q-FN-fXP" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yQy-Qf-DDl"/>
+                            <constraint firstItem="hfM-g5-sQl" firstAttribute="centerX" secondItem="KHA-uv-YzB" secondAttribute="centerX" type="default" id="ziv-AT-bdO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="درباره ما" id="egi-kd-c1d">
@@ -95,7 +113,13 @@
             <point key="canvasLocation" x="83" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="asa_logo_transparent.png" width="201" height="248"/>
+    </resources>
     <classes>
+        <class className="ASAAboutController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ASAAboutController.h"/>
+        </class>
         <class className="ASAViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ASAViewController.h"/>
         </class>
